<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_ptransport"
            android:icon="@drawable/baseline_train_24"
            android:title="@string/public_transport" />

        <item
            android:id="@+id/nav_coffsets"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/carbon_offsets" />
    </group>
</menu>