<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/primary_blue"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="370dp"
        android:layout_height="250dp"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/newco2tracker" />

    <!-- Email EditText -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@android:color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:autofillHints="" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>