<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@color/primary_blue"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp" />

    <!-- Email EditText -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_textfield"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_textfield"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"/>

    <!-- Password EditText -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_textfield"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:autofillHints="" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/dropdown_bg"
        android:layout_gravity="center_horizontal"
        app:boxBackgroundColor="@color/primary_green"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconTint="@color/white">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/choose_car_type"
            android:textColor="@android:color/white"
            android:background="@null"
            android:dropDownSelector="@drawable/dropdown_bg"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            tools:ignore="LabelFor"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>